2009-10-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/connector.hh, music/event_router.hh, music/port.hh,
	connector.cc, event_router.cc, port.cc: Join event routing
	intervals over holes in the routing map.  This increases
	efficiency of event routing but has the consequence that
	non-mapped indices may now be erroneously routed.

2009-10-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music-c.h: (MUSIC_EventOutputPort_mapGlobalIndex)
	(MUSIC_EventOutputPort_mapLocalIndex): Inserted missing
	declarations.  (Thanks to Michael Hines.)

	* Makefile.am (musicinclude_HEADERS): Removed duplicate
	message.hh.

2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Release 1.0.4

2009-03-15  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/spatial.hh, spatial.cc (NegotiationIterator): Join
	intervals.  (In some cases this allows thousands of routing
	intervals to be replaced by a single one.)

	* runtime.cc (Runtime::finalize): Only include Barrier call for
	OpenMPI versions <= 1.2.

	* music/temporal.hh,
	temporal.cc (TemporalNegotiator::computeDefaultMaxBuffered):
	Select a proper default buffering for message ports.

	* spatial.cc (SpatialInputNegotiator::negotiateWidth): Set
	maxLocalWidth_ when given wildcard index.

2009-03-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/connector.hh, music/subconnector.hh, connector.cc,
	subconnector.cc: Moved buffer from subconnector to connector for
	MessageOutputPorts.

	* music/subconnector.hh (BufferingOutputSubconnector): New class.

	* music/FIBO.hh, FIBO.cc (FIBO::clear, FIBO::nextBlockNoClear):
	New member functions.

	* port.cc (MessageInputPort::mapImpl): Give correct routing
	information in the indexMap.

	* music/port.hh, port.cc (MessageInputPort::map): Cover all
	argument combinations.

	* music/index_map.hh, index_map.cc (Index::WILDCARD_MAX): New
	member.

	* spatial.cc: Accept wild card indices on receiver side.

	* subconnector.cc (EventInputSubconnectorGlobal::receive,